addysnip/base/api/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: addysnip
spec:
  rules:
  - host: api.dev.addysnip.com
    http:
      paths:
      - backend:
          service:
            name: api
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.dev.addysnip.com
    secretName: addysnip-com-tls
